--- a/web/index.html
+++ b/web/index.html
@@ -617,12 +617,26 @@
 
                         <!-- 调研进度 -->
                         <div class="bg-surface border border-border rounded-xl p-5">
-                            <h3 class="font-semibold text-primary mb-4 flex items-center gap-2">
-                                <svg class="w-5 h-5 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/>
-                                </svg>
-                                调研进度
-                            </h3>
+                            <div class="flex items-center justify-between mb-4">
+                                <h3 class="font-semibold text-primary flex items-center gap-2">
+                                    <svg class="w-5 h-5 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/>
+                                    </svg>
+                                    访谈进度
+                                </h3>
+                                <span class="text-sm font-medium text-primary" x-text="getCurrentQuestionCount() + '/' + getEstimatedTotalQuestions()"></span>
+                            </div>
+
+                            <!-- 正向反馈提示 -->
+                            <template x-if="getProgressFeedback()">
+                                <div class="mb-4 p-2.5 rounded-lg flex items-center gap-2"
+                                     :class="getProgressFeedback().type === 'success' ? 'bg-green-50 text-green-700' : 'bg-blue-50 text-blue-700'">
+                                    <svg class="w-4 h-4 shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                                    </svg>
+                                    <span class="text-xs" x-text="getProgressFeedback().message"></span>
+                                </div>
+                            </template>
                             <div class="space-y-4">
                                 <template x-for="(dimKey) in dimensionOrder" :key="dimKey">
                                     <div class="space-y-2" :class="currentDimension === dimKey ? 'bg-cta/5 -mx-2 px-2 py-2 rounded-lg' : ''">
@@ -664,6 +678,9 @@
                                 <div class="h-3 bg-gray-100 rounded-full overflow-hidden">
                                     <div class="h-full rounded-full progress-bar"
                                          :style="getProgressBarStyle(getTotalProgress())"></div>
+                                </div>
+                                <div class="mt-2 text-xs text-center text-muted">
+                                    <span x-text="'约还剩 ' + getEstimatedRemainingQuestions() + ' 题'"></span>
                                 </div>
                             </div>
 
@@ -1179,6 +1196,31 @@
                                         </div>
                                     </div>
 
+                                    <!-- 用户控制按钮组 -->
+                                    <template x-if="canShowSkipFollowUp() || canShowCompleteDimension()">
+                                        <div class="mt-4 p-3 bg-blue-50 border border-blue-200 rounded-lg">
+                                            <div class="flex flex-wrap items-center gap-2">
+                                                <span class="text-xs text-blue-700 font-medium">快速操作：</span>
+                                                <button x-show="canShowSkipFollowUp()"
+                                                        @click="skipFollowUp()"
+                                                        class="px-3 py-1.5 bg-white border border-blue-300 text-blue-700 rounded-lg text-xs font-medium hover:bg-blue-50 transition-colors cursor-pointer flex items-center gap-1">
+                                                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
+                                                    </svg>
+                                                    这个话题说清楚了
+                                                </button>
+                                                <button x-show="canShowCompleteDimension()"
+                                                        @click="completeDimension()"
+                                                        class="px-3 py-1.5 bg-white border border-blue-300 text-blue-700 rounded-lg text-xs font-medium hover:bg-blue-50 transition-colors cursor-pointer flex items-center gap-1">
+                                                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                                                    </svg>
+                                                    跳到下一维度
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </template>
+
                                     <div class="flex flex-col-reverse sm:flex-row justify-between items-stretch sm:items-center gap-3 mt-6 pt-4 border-t border-gray-100">
                                         <button x-show="canGoPrevQuestion()"
                                                 @click="goPrevQuestion()"
@@ -1415,6 +1457,53 @@
                                   class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-[#F0F8FF] focus:border-[#F0F8FF] resize-none"></textarea>
                         <p class="text-xs text-muted mt-1">输入详细描述可以让访谈问题更贴合您的实际需求</p>
                     </div>
+
+                    <!-- 访谈模式选择 -->
+                    <div class="mb-4">
+                        <label class="block text-sm font-medium text-secondary mb-3">访谈深度</label>
+                        <div class="space-y-2">
+                            <!-- 快速模式 -->
+                            <label class="flex items-start gap-3 p-3 border-2 rounded-lg cursor-pointer transition-all duration-200 hover:border-primary/40"
+                                   :class="selectedInterviewMode === 'quick' ? 'border-primary bg-primary/5' : 'border-gray-200'">
+                                <input type="radio" name="interviewMode" value="quick" x-model="selectedInterviewMode" class="mt-1">
+                                <div class="flex-1">
+                                    <div class="flex items-center gap-2 mb-1">
+                                        <span class="font-medium text-primary">⚡ 快速模式</span>
+                                        <span class="text-xs text-muted">约 12-16 题</span>
+                                    </div>
+                                    <p class="text-xs text-muted">每维度 2 个核心问题，适度追问。适合时间紧张的简单项目</p>
+                                </div>
+                            </label>
+
+                            <!-- 标准模式 -->
+                            <label class="flex items-start gap-3 p-3 border-2 rounded-lg cursor-pointer transition-all duration-200 hover:border-primary/40"
+                                   :class="selectedInterviewMode === 'standard' ? 'border-primary bg-primary/5' : 'border-gray-200'">
+                                <input type="radio" name="interviewMode" value="standard" x-model="selectedInterviewMode" class="mt-1">
+                                <div class="flex-1">
+                                    <div class="flex items-center gap-2 mb-1">
+                                        <span class="font-medium text-primary">⭐ 标准模式</span>
+                                        <span class="text-xs bg-primary/10 text-primary px-2 py-0.5 rounded">推荐</span>
+                                        <span class="text-xs text-muted">约 20-28 题</span>
+                                    </div>
+                                    <p class="text-xs text-muted">每维度 3 个问题，智能追问。效率与深度兼顾，适合大多数情况</p>
+                                </div>
+                            </label>
+
+                            <!-- 深度模式 -->
+                            <label class="flex items-start gap-3 p-3 border-2 rounded-lg cursor-pointer transition-all duration-200 hover:border-primary/40"
+                                   :class="selectedInterviewMode === 'deep' ? 'border-primary bg-primary/5' : 'border-gray-200'">
+                                <input type="radio" name="interviewMode" value="deep" x-model="selectedInterviewMode" class="mt-1">
+                                <div class="flex-1">
+                                    <div class="flex items-center gap-2 mb-1">
+                                        <span class="font-medium text-primary">🔬 深度模式</span>
+                                        <span class="text-xs text-muted">约 28-40 题</span>
+                                    </div>
+                                    <p class="text-xs text-muted">每维度 4 个问题，充分追问。深入挖掘细节，适合复杂项目</p>
+                                </div>
+                            </label>
+                        </div>
+                    </div>
+
                     <div class="flex gap-3 justify-end pt-2">
                         <button type="button" @click="showNewSessionModal = false"
                                 class="px-5 py-2.5 border border-gray-300 rounded-lg font-medium hover:bg-gray-50 transition-colors duration-200 cursor-pointer">
@@ -1428,6 +1517,72 @@
                         </button>
                     </div>
                 </form>
+            </div>
+        </div>
+
+        <!-- ========== 里程碑弹窗 ========== -->
+        <div x-show="showMilestoneModal"
+             x-transition:enter="transition ease-out duration-200"
+             x-transition:enter-start="opacity-0"
+             x-transition:enter-end="opacity-100"
+             x-transition:leave="transition ease-in duration-150"
+             x-transition:leave-start="opacity-100"
+             x-transition:leave-end="opacity-0"
+             class="fixed inset-0 bg-black/50 flex items-center justify-center z-50 p-4">
+            <div class="bg-white rounded-2xl shadow-2xl max-w-md w-full p-6"
+                 x-transition:enter="transition ease-out duration-200"
+                 x-transition:enter-start="opacity-0 scale-95"
+                 x-transition:enter-end="opacity-100 scale-100">
+                <div class="text-center">
+                    <!-- 成功图标 -->
+                    <div class="w-16 h-16 bg-green-100 rounded-full flex items-center justify-center mx-auto mb-4">
+                        <svg class="w-10 h-10 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
+                        </svg>
+                    </div>
+
+                    <!-- 标题 -->
+                    <h3 class="text-xl font-semibold text-primary mb-2">
+                        <span x-text="milestoneData?.dimName || ''"></span> 收集完成
+                    </h3>
+
+                    <!-- 统计信息 -->
+                    <template x-if="milestoneData?.stats">
+                        <div class="my-4 py-3 px-4 bg-gray-50 rounded-lg text-sm text-muted">
+                            <div class="flex justify-center gap-6">
+                                <div>
+                                    <span class="font-medium text-primary" x-text="milestoneData.stats.formal_questions || 0"></span>
+                                    <span>个问题</span>
+                                </div>
+                                <div>
+                                    <span class="font-medium text-primary" x-text="milestoneData.stats.follow_ups || 0"></span>
+                                    <span>次追问</span>
+                                </div>
+                            </div>
+                        </div>
+                    </template>
+
+                    <!-- 下一步提示 -->
+                    <template x-if="milestoneData && !milestoneData.isLastDimension">
+                        <div class="mb-6">
+                            <p class="text-muted text-sm">接下来将进入</p>
+                            <p class="text-primary font-medium mt-1" x-text="milestoneData.nextDimName"></p>
+                        </div>
+                    </template>
+
+                    <template x-if="milestoneData && milestoneData.isLastDimension">
+                        <div class="mb-6">
+                            <p class="text-green-600 font-medium">所有维度已完成！</p>
+                            <p class="text-muted text-sm mt-1">您可以确认需求并生成调研报告</p>
+                        </div>
+                    </template>
+
+                    <!-- 继续按钮 -->
+                    <button @click="continueMilestone()"
+                            class="w-full btn-sage-blue text-white px-6 py-3 rounded-lg font-medium transition-colors cursor-pointer">
+                        <span x-text="milestoneData?.isLastDimension ? '完成并确认' : '继续访谈'"></span>
+                    </button>
+                </div>
             </div>
         </div>
 
