feat: 移除提前确认需求入口，必须完成所有维度才能生成报告
- 确认需求按钮只在总进度100%时显示
- 所有维度完成后自动进入确认阶段
- 保证报告生成质量

--- a/web/index.html
+++ b/web/index.html
@@ -686,7 +686,7 @@
 
                             <!-- 操作按钮 -->
                             <div class="mt-6 space-y-3">
-                                <button x-show="getTotalProgress() >= 50"
+                                <button x-show="getTotalProgress() >= 100 || currentStep === 2"
                                         @click="currentStep === 2 ? generateReport() : goToConfirmation()"
                                         :disabled="currentStep === 2 && generatingReport"
                                         :class="(currentStep === 2 && generatingReport) ? 'btn-sage-blue opacity-80 cursor-wait' : 'btn-sage-blue cursor-pointer'"
