style: 访谈模式单选框颜色改为爱丽丝蓝
将单选框选中颜色从默认黑色改为 #F0F8FF（爱丽丝蓝）

--- a/web/index.html
+++ b/web/index.html
@@ -1473,7 +1473,7 @@
                             <!-- 快速模式 -->
                             <label class="flex items-start gap-3 p-3 border-2 rounded-lg cursor-pointer transition-all duration-200 hover:border-primary/40"
                                    :class="selectedInterviewMode === 'quick' ? 'border-primary bg-primary/5' : 'border-gray-200'">
-                                <input type="radio" name="interviewMode" value="quick" x-model="selectedInterviewMode" class="mt-1">
+                                <input type="radio" name="interviewMode" value="quick" x-model="selectedInterviewMode" class="mt-1 accent-[#F0F8FF]" style="accent-color: #F0F8FF;">
                                 <div class="flex-1">
                                     <div class="flex items-center gap-2 mb-1">
                                         <span class="font-medium text-primary">⚡ 快速模式</span>
@@ -1486,7 +1486,7 @@
                             <!-- 标准模式 -->
                             <label class="flex items-start gap-3 p-3 border-2 rounded-lg cursor-pointer transition-all duration-200 hover:border-primary/40"
                                    :class="selectedInterviewMode === 'standard' ? 'border-primary bg-primary/5' : 'border-gray-200'">
-                                <input type="radio" name="interviewMode" value="standard" x-model="selectedInterviewMode" class="mt-1">
+                                <input type="radio" name="interviewMode" value="standard" x-model="selectedInterviewMode" class="mt-1 accent-[#F0F8FF]" style="accent-color: #F0F8FF;">
                                 <div class="flex-1">
                                     <div class="flex items-center gap-2 mb-1">
                                         <span class="font-medium text-primary">⭐ 标准模式</span>
@@ -1500,7 +1500,7 @@
                             <!-- 深度模式 -->
                             <label class="flex items-start gap-3 p-3 border-2 rounded-lg cursor-pointer transition-all duration-200 hover:border-primary/40"
                                    :class="selectedInterviewMode === 'deep' ? 'border-primary bg-primary/5' : 'border-gray-200'">
-                                <input type="radio" name="interviewMode" value="deep" x-model="selectedInterviewMode" class="mt-1">
+                                <input type="radio" name="interviewMode" value="deep" x-model="selectedInterviewMode" class="mt-1 accent-[#F0F8FF]" style="accent-color: #F0F8FF;">
                                 <div class="flex-1">
                                     <div class="flex items-center gap-2 mb-1">
                                         <span class="font-medium text-primary">🔬 深度模式</span>
