--- a/web/index.html
+++ b/web/index.html
@@ -607,61 +607,74 @@
                         <div class="space-y-4">
                             <!-- 结果统计 -->
                             <div class="flex items-center justify-between text-sm text-muted" x-show="filteredSessions.length > 0">
-                                <span>显示 <span x-text="paginationStart"></span>-<span x-text="paginationEnd"></span> / 共 <span x-text="filteredSessions.length"></span> 条</span>
+                                <template x-if="useVirtualList">
+                                    <span>共 <span x-text="filteredSessions.length"></span> 条</span>
+                                </template>
+                                <template x-if="!useVirtualList">
+                                    <span>显示 <span x-text="paginationStart"></span>-<span x-text="paginationEnd"></span> / 共 <span x-text="filteredSessions.length"></span> 条</span>
+                                </template>
                             </div>
 
                             <!-- 会话卡片列表 -->
-                            <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
-                                <template x-for="session in paginatedSessions" :key="session.session_id">
-                                    <div class="group bg-surface border border-border rounded-xl hover:shadow-sm transition-all duration-200 p-4 cursor-pointer"
+                            <div x-ref="sessionListScroller">
+                                <div :style="useVirtualList ? `height: ${virtualPaddingTop}px;` : ''"></div>
+                                <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
+                                    <template x-for="session in sessionsToRender" :key="session.session_id">
+                                        <div class="group bg-surface border border-border rounded-xl hover:shadow-sm transition-all duration-200 p-4 cursor-pointer h-32 overflow-hidden"
                                          @click="openSession(session.session_id)">
-                                        <!-- 头部：标题 + 标签 + 操作按钮 -->
-                                        <div class="flex items-start justify-between gap-3">
-                                            <div class="min-w-0 flex-1">
-                                                <div class="flex items-center gap-2 min-w-0">
-                                                    <h3 class="text-base font-semibold text-primary line-clamp-1 flex-1 min-w-0"
-                                                        :title="session.topic"
-                                                        x-text="session.topic"></h3>
+                                        <div class="grid grid-cols-1 sm:grid-cols-[minmax(0,1fr)_190px] gap-x-3 gap-y-2 h-full items-start pt-1">
+                                            <!-- 左侧：标题 + 摘要 + 元信息 -->
+                                            <div class="min-w-0 flex flex-col justify-start">
+                                                <h3 class="text-lg font-semibold text-primary line-clamp-1"
+                                                    :title="session.topic"
+                                                    x-text="session.topic"></h3>
+                                                <template x-if="session.description">
+                                                    <p class="text-sm text-secondary line-clamp-2 mt-1"
+                                                       :title="session.description"
+                                                       x-text="session.description"></p>
+                                                </template>
+                                            </div>
+
+                                            <!-- 右侧：标签 -->
+                                            <div class="flex flex-wrap items-center justify-start gap-1 w-full sm:justify-end">
                                                     <span :class="getStatusBadgeClass(session.status)"
-                                                          class="px-2 py-0.5 rounded-full text-[10px] font-medium whitespace-nowrap shrink-0"
+                                                          class="px-3 py-1.5 rounded-full text-[11px] font-medium whitespace-nowrap shrink-0"
                                                           x-text="getStatusText(session.status)"></span>
                                                     <span x-show="session.scenario_config?.name"
-                                                          class="px-2 py-0.5 rounded-full text-[10px] font-medium bg-blue-50 text-blue-600 whitespace-nowrap shrink-0 max-w-[140px] truncate"
+                                                          class="px-3 py-1.5 rounded-full text-[11px] font-medium bg-blue-50 text-blue-600 whitespace-nowrap shrink-0 max-w-[140px] truncate"
                                                           :title="session.scenario_config?.name || ''"
                                                           x-text="session.scenario_config?.name || ''"></span>
-                                                </div>
-                                                <p class="text-sm text-secondary line-clamp-2 mt-1"
-                                                   :title="session.description ? session.description : `已收集 ${session.interview_count || 0} 条问答 · 进度 ${getSessionTotalProgress(session)}%`"
-                                                   x-text="session.description ? session.description : `已收集 ${session.interview_count || 0} 条问答 · 进度 ${getSessionTotalProgress(session)}%`"></p>
+                                                    <button @click.stop="confirmDeleteSession(session.session_id)"
+                                                            class="p-1.5 text-gray-300 hover:text-danger hover:bg-red-50 rounded-md transition-colors cursor-pointer sm:opacity-0 sm:pointer-events-none sm:group-hover:opacity-100 sm:group-hover:pointer-events-auto"
+                                                            aria-label="删除会话">
+                                                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                                  d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"/>
+                                                        </svg>
+                                                    </button>
                                             </div>
-                                            <div class="flex items-center shrink-0 transition-opacity duration-200 sm:opacity-0 sm:pointer-events-none sm:group-hover:opacity-100 sm:group-hover:pointer-events-auto">
-                                                <button @click.stop="confirmDeleteSession(session.session_id)"
-                                                        class="p-1.5 text-gray-300 hover:text-danger hover:bg-red-50 rounded-md transition-colors cursor-pointer"
-                                                        aria-label="删除会话">
-                                                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                              d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"/>
-                                                    </svg>
-                                                </button>
-                                            </div>
-                                        </div>
 
-                                        <!-- 元信息 -->
-                                        <div class="flex flex-wrap items-center gap-x-3 gap-y-1 text-xs text-muted mt-3">
-                                            <span>创建: <span x-text="formatDate(session.created_at)"></span></span>
-                                            <span class="hidden sm:inline">·</span>
-                                            <span>问答: <span x-text="session.interview_count || 0"></span> 条</span>
-                                            <div class="flex items-center gap-2 sm:ml-auto">
-                                                <span class="text-[11px] text-muted">进度</span>
-                                                <div class="w-20 sm:w-24 h-1 bg-gray-200/80 rounded-full overflow-hidden">
-                                                    <div class="h-full rounded-full transition-all duration-500"
-                                                         :style="getProgressBarStyle(getSessionTotalProgress(session))"></div>
+                                            <!-- 底部行：元信息 + 进度（同一水平线） -->
+                                            <div class="grid grid-cols-1 sm:grid-cols-[minmax(0,1fr)_190px] gap-2 sm:col-span-2 mt-2.5">
+                                                <div class="flex flex-wrap items-center gap-x-3 gap-y-1 text-[13px] text-muted">
+                                                    <span>创建: <span x-text="formatDate(session.created_at)"></span></span>
+                                                    <span class="hidden sm:inline">·</span>
+                                                    <span>问答: <span x-text="session.interview_count || 0"></span> 条</span>
                                                 </div>
-                                                <span class="text-[11px] text-muted" x-text="getSessionTotalProgress(session) + '%'"></span>
+                                                <div class="grid grid-cols-[32px_minmax(0,1fr)_36px] items-center gap-2 w-full">
+                                                    <span class="text-[12px] text-muted">进度</span>
+                                                    <div class="h-1.5 bg-gray-200/80 rounded-full overflow-hidden">
+                                                        <div class="h-full rounded-full transition-all duration-500"
+                                                             :style="getProgressBarStyle(getSessionTotalProgress(session))"></div>
+                                                    </div>
+                                                    <span class="text-[12px] text-muted text-right" x-text="getSessionTotalProgress(session) + '%'"></span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                </template>
+                                    </template>
+                                </div>
+                                <div :style="useVirtualList ? `height: ${virtualPaddingBottom}px;` : ''"></div>
                             </div>
 
                             <!-- 空状态：无搜索结果 -->
@@ -696,7 +709,7 @@
                             </template>
 
                             <!-- 分页控件 -->
-                            <template x-if="totalPages > 1">
+                            <template x-if="!useVirtualList && totalPages > 1">
                                 <div class="flex flex-col sm:flex-row items-center justify-center gap-4 pt-4">
                                     <div class="flex items-center gap-2">
                                         <button @click="goToPage(currentPage - 1)"
